# HLex

./: .gitignore  CHANGELOG.md  HLex.cabal  README.md
app/: Code.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: CodeGenerator.hs  HaskellSnippits.hs  Main.hs  TreeGenerator.hs
src/Snippits/: Haskell.hs  Utils.hs
