cabal-version:      2.4
name:               HLex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mitchell Holt
maintainer:         mitchellholt2002@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable HLex
    -- Import common warning flags.
    import:           warnings

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Code

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.16.4.0, transformers
    hs-source-dirs:   app
    default-language: GHC2021
